--- a/PersonalRagServer/requirements.txt
+++ b/PersonalRagServer/requirements.txt
@@ -1,9 +1,12 @@
 fastapi
 uvicorn
+langchain
+langchain-community
+langchain-pinecone
 pinecone
 huggingface_hub
 python-dotenv
 requests
-dotenv
-numpy
+httpx
 google-generativeai
+langchain-google-genai
